<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/view_layout">

    <Button
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="Delete" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="Edit" />

    <LinearLayout
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:weightSum="1.0">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/entry_name"
            />
        <TextView
            android:id="@+id/name"
            android:maxLength="25"
            android:layout_width="0dp"
            android:layout_weight="0.85"
            android:layout_height="wrap_content"
            tools:background="@android:drawable/dialog_holo_light_frame" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_below="@+id/name_field">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/entry_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_entry_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_below="@+id/date_field">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.10"
            android:layout_height="wrap_content"
            android:text="@string/entry_year" />
        <TextView
            android:id="@+id/year"
            android:inputType="none"
            android:maxLength="4"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            />

        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/entry_month" />
        <TextView
            android:id="@+id/month"
            android:maxLength="2"
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            />

        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/entry_day" />
        <TextView
            android:id="@+id/day"

            android:maxLength="2"
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/measurement_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_below="@+id/date_entry_field">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/entry_measurement" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_field_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_below="@+id/measurement_field">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/entry_neck"/>
        <TextView
            android:id="@+id/neck"

            android:maxLength="3"
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background" />

        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/entry_bust"/>
        <TextView
            android:id="@+id/bust"

            android:maxLength="3"
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>

        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/entry_chest"/>
        <TextView
            android:id="@+id/chest"

            android:maxLength="3"
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_field_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_below="@+id/data_field_1">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/entry_waist"/>
        <TextView
            android:id="@+id/waist"

            android:maxLength="3"
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>

        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/entry_hip"/>
        <TextView
            android:id="@+id/hip"
            android:maxLength="3"
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"

            android:background="@android:drawable/editbox_background"/>

        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/entry_inseam"/>
        <TextView
            android:id="@+id/inseam"
            android:inputType="none"
            android:maxLength="3"
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_below="@+id/data_field_2">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/entry_comment" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_entry_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment_field"
        android:layout_above="@+id/button_left">

        <TextView
            android:id="@+id/comment"
            android:hint="@string/entry_comment_hint"
            android:inputType="none"
            android:maxLength="500"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"

            android:background="@android:drawable/editbox_background" />
    </LinearLayout>
</RelativeLayout>